--- a/EmpApp/EmpApp.csproj
+++ b/EmpApp/EmpApp.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Components\Data\" />
-    <Folder Include="Components\Models\" />
-    <Folder Include="Components\Services\" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
